--- a/index.html
+++ b/index.html
@@ -4938,7 +4938,7 @@ flexibility(document.documentElement);
 										<div class="textwidget">
 											<p>Halifax, NS.<br>
 												+1 902 401 8486<br>
-												info@budsapp.ca</p>
+												idris.wishiwala@budsapp.ca</p>
 										</div>
 									</section>
 								</div>
